_generated-doc/2.7/config/quarkus-smallrye-jwt-small-rye-jwt-build-time-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-smallrye-jwt-small-rye-jwt-build-time-config_configuration]]link:#quarkus-smallrye-jwt-small-rye-jwt-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-jwt-small-rye-jwt-build-time-config_quarkus.smallrye-jwt.enabled]]`link:#quarkus-smallrye-jwt-small-rye-jwt-build-time-config_quarkus.smallrye-jwt.enabled[quarkus.smallrye-jwt.enabled]`

[.description]
--
The MP-JWT configuration object
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-jwt-small-rye-jwt-build-time-config_quarkus.smallrye-jwt.rsa-sig-provider]]`link:#quarkus-smallrye-jwt-small-rye-jwt-build-time-config_quarkus.smallrye-jwt.rsa-sig-provider[quarkus.smallrye-jwt.rsa-sig-provider]`

[.description]
--
The name of the `java.security.Provider` that supports SHA256withRSA signatures
--|string 
|`SunRsaSign`

|===